--- a/projects/jtProject/frontend/sass/modules/topMainContent.sass
+++ b/projects/jtProject/frontend/sass/modules/topMainContent.sass
@@ -76,6 +76,12 @@
       display: none
 
 
+.js-menu-more
+  list-style: none
+  li:first-child
+    margin: 0!important
+    height: 0!important
+
 .t-sortMenuHolder
   max-width: 440.88px
   margin-right: 8px
