--- a/projects/jtProject/frontend/templates/aside.jade
+++ b/projects/jtProject/frontend/templates/aside.jade
@@ -1,6 +1,6 @@
 aside
     div.t-asideInsideHolder
-        section.t-logoSection
+        section.t-logoSection.t-logoSectionMain
             div.t-burger.t-mainBurger
                 span.line
                 span.line
