--- a/projects/jtProject/frontend/templates/authors.jade
+++ b/projects/jtProject/frontend/templates/authors.jade
@@ -3,6 +3,7 @@ extends _layout
 block content
     include aside
     main.t-mainMain
+        section.t-mobHeader
         section.t-mainTopContent
             + topCard('Авторы')
         section.t-authorsWrapper
