--- a/projects/jtProject/frontend/templates/index.jade
+++ b/projects/jtProject/frontend/templates/index.jade
@@ -3,6 +3,7 @@ extends _layout
 block content
     include aside
     main.t-mainMain
+        section.t-mobHeader
         section.t-mainTopContent
             + topCard('Всё сразу', 'Все темы', 'Дизайн', 'Маркетинг', 'CEO', 'Разработка', 'Бизнес')
         section.t-articlesWrapper
