--- a/projects/jtProject/frontend/sass/main.sass
+++ b/projects/jtProject/frontend/sass/main.sass
@@ -8,4 +8,5 @@
 @import "modules/authors"
 @import "modules/authorModal"
 @import "modules/newsModal"
+@import "modules/search"
 @import "styleModules/media"
