--- a/projects/jtProject/frontend/sass/modules/authors.sass
+++ b/projects/jtProject/frontend/sass/modules/authors.sass
@@ -47,6 +47,8 @@
   padding: 0
   margin: 0
 .t-authorLikesHolder, .t-authorModalLikesHolder
+  display: flex
+  align-items: center
   margin-top: 16px
   .t-authorLikesCount
     margin-left: 8px
