--- a/projects/jtProject/frontend/sass/styleModules/media.sass
+++ b/projects/jtProject/frontend/sass/styleModules/media.sass
@@ -61,13 +61,17 @@
 
 
 @media (max-width: 800px)
+  *
+    cursor: default!important
+  .cursor
+    display: none
   .t-authorModal
     .t-hiddenLogoWrapper.activateBg
       background-color: transparent
       width: auto
       padding: 0
       &:after
-        display: none
+        display: none!important
   .t-sortMenuHolder
     max-width: 65px
   .t-logoWrapper .t-logo
@@ -117,6 +121,14 @@
         margin-right: 16px
 
 @media (max-width: 768px)
+  .t-modalNewsBtnsHolder
+    top: 42px!important
+    right: 24px!important
+    span
+      display: none
+    .t-modalBtnsCtrl
+      margin-right: 24px!important
+
   .t-newsModal .t-newsColorBlock
     flex: 1 1 1%
     width: 1%
@@ -151,6 +163,9 @@
       order: 6
 
   .t-authorModal
+    .t-hiddenLogoWrapper.activateBg
+      &:after
+        display: none!important
     .t-authorModalInfoHolder
       flex-direction: column
     .t-authorModalInfo
@@ -164,7 +179,15 @@
       top: -88px
       padding: 17px 23px 23px 30px
       .t-profileModalButtonsHolder
+        .t-modalShare
+          display: none
+        svg
+          .t-svgBg
+            fill: transparent
+          .t-svgFigure
+            fill: $lgrey
         span
+          display: none
           color: #000
     .t-authorModalInfo
       overflow: visible
