--- a/projects/jtProject/frontend/templates/_layout.jade
+++ b/projects/jtProject/frontend/templates/_layout.jade
@@ -57,7 +57,14 @@ mixin authorCard(changeImg, name, profession, count, likes)
                     li Дизайн,
                     li бизнес,
                 div.t-authorLikesHolder
-                    span ico
+                    span
+                        svg(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                            use(xlink:href='#path0_fill4', fill='#FFF').t-svgBg
+                            use(xlink:href='#path1_stroke4', transform='translate(6.85 7.93)', fill='#E0E0E0').t-svgFigure
+                            defs
+                                path#path0_fill4(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                                path#path1_stroke4(d='M10.147 4.066l.97.243-.97-.243zm-5 5l-.391.92a1 1 0 0 0 .783 0l-.392-.92zm-5-5l-.97.243.97-.243zm5-2l-.928.371a1 1 0 0 0 1.857 0l-.929-.37zm-3-2l-.242-.97.242.97zm6 0l.243-.97-.243.97zm1.03 3.757c-.317 1.269-1.34 2.343-2.425 3.144A11.781 11.781 0 0 1 4.9 8.079a6.101 6.101 0 0 1-.142.065l-.004.002.392.92.393.92.002-.001.004-.002.014-.006a5.036 5.036 0 0 0 .197-.09 13.78 13.78 0 0 0 2.182-1.31c1.214-.896 2.691-2.322 3.178-4.268l-1.94-.486zm-4.03 5.243l.393-.92-.004-.002a3.079 3.079 0 0 1-.142-.065 11.785 11.785 0 0 1-1.85-1.113c-1.085-.8-2.108-1.874-2.427-3.143l-1.94.486c.489 1.946 1.966 3.371 3.179 4.267a13.784 13.784 0 0 0 2.181 1.31 8.056 8.056 0 0 0 .211.097l.005.002h.002l.392-.919zm-4.03-5.243c-.206-.822-.12-1.461.1-1.898.212-.421.59-.743 1.173-.889l-.485-1.94C.794-.626-.079.052-.569 1.026c-.482.956-.55 2.106-.254 3.283l1.94-.486zM2.39 1.036c.485-.12.88.08 1.26.507a3.495 3.495 0 0 1 .567.89l.003.008V2.44a.115.115 0 0 1-.001-.002l.928-.372c.929-.37.929-.371.929-.372l-.001-.002-.002-.004a1.532 1.532 0 0 0-.018-.044 5.473 5.473 0 0 0-.219-.443 5.49 5.49 0 0 0-.69-.987C4.525-.483 3.42-1.283 1.904-.904l.485 1.94zm2.757 1.03c.929.372.929.372.928.373a.06.06 0 0 1 0 .001v.002h-.001a.705.705 0 0 1 .027-.061 3.502 3.502 0 0 1 .544-.838c.38-.428.776-.628 1.26-.507l.485-1.94C6.875-1.283 5.77-.483 5.15.214a5.498 5.498 0 0 0-.928 1.473l-.002.004v.002c0 .001-.001.001.927.373zm2.758-1.03c.583.146.96.468 1.172.889.22.437.306 1.076.1 1.898l1.94.486c.295-1.178.228-2.327-.253-3.284C10.374.052 9.5-.626 8.39-.904l-.485 1.94z')
+
                     span.t-authorLikesCount= likes
 
 mixin topCard(pageName, listOne, listTwo, listThird, listFour, listFive, listSix)
@@ -103,9 +110,36 @@ mixin topCard(pageName, listOne, listTwo, listThird, listFour, listFive, listSix
                         li Дичь
                         li Дичь2
         ul.t-topListCtrl.t-topRightSection
-            li ico
-            li ico
-            li ico
+            li
+                svg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                    use(xlink:href='#path0_fill1', fill='#FFF').t-svgBg
+                    use(xlink:href='#path1_fill1', transform='translate(8 6)', fill='#E0E0E0').t-svgFigure
+                    defs
+                        path#path0_fill1(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                        path#path1_fill1(fill-rule='evenodd', d='M0 1a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2a1 1 0 0 1-2 0V2H2v7a1 1 0 1 1-2 0V1zm7 5a1 1 0 0 1 1 1v1h1a1 1 0 1 1 0 2H8v1a1 1 0 1 1-2 0v-1H5a1 1 0 1 1 0-2h1V7a1 1 0 0 1 1-1z')
+
+
+            li
+                svg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                    use(xlink:href='#path0_fill2', fill='#FFF').t-svgBg
+                    use(xlink:href='#path1_fill2', transform='translate(7 6)', fill='#E0E0E0').t-svgFigure
+                    defs
+                        path#path0_fill2(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                        path#path1_fill2(fill-rule='evenodd', d='M7.005 4a2 2 0 1 1-3.999.001 2 2 0 0 1 4-.001zm.914 2.742A3.979 3.979 0 0 0 9.005 4c0-2.209-1.789-4-4-4-2.21 0-4 1.791-4 4 0 1.062.41 2.026 1.086 2.742a5.991 5.991 0 0 0-1.89 1.66 1 1 0 1 0 1.601 1.2A3.986 3.986 0 0 1 5.002 8c1.312 0 2.472.627 3.202 1.602.332.442.961.531 1.403.2a1 1 0 0 0 .199-1.4 6.082 6.082 0 0 0-1.887-1.66z')
+
+
+
+            li.t-searchBtn
+                svg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                    use(xlink:href='#path0_fill3', fill='#FFF').t-svgBg
+                    use(xlink:href='#path1_fill3', transform='translate(7 6)', fill='#E0E0E0').t-svgFigure
+                    defs
+                        path#path0_fill3(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                        path#path1_fill3(fill-rule='evenodd', d='M9 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0zm2 0a5 5 0 0 1-7.758 4.171l-1.535 1.536A1 1 0 1 1 .293 9.293l1.535-1.536A5 5 0 1 1 11 5z')
+
+
+
+
 
 mixin authorsModal()
     div.t-fixed.t-authorModal
@@ -120,7 +154,13 @@ mixin authorsModal()
                     li Дизайн,
                     li бизнес,
                 div.t-authorModalLikesHolder
-                    span ico
+                    span
+                        svg(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                            use(xlink:href='#path0_fill4', fill='#FFF').t-svgBg
+                            use(xlink:href='#path1_stroke4', transform='translate(6.85 7.93)', fill='#E0E0E0').t-svgFigure
+                            defs
+                                path#path0_fill4(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                                path#path1_stroke4(d='M10.147 4.066l.97.243-.97-.243zm-5 5l-.391.92a1 1 0 0 0 .783 0l-.392-.92zm-5-5l-.97.243.97-.243zm5-2l-.928.371a1 1 0 0 0 1.857 0l-.929-.37zm-3-2l-.242-.97.242.97zm6 0l.243-.97-.243.97zm1.03 3.757c-.317 1.269-1.34 2.343-2.425 3.144A11.781 11.781 0 0 1 4.9 8.079a6.101 6.101 0 0 1-.142.065l-.004.002.392.92.393.92.002-.001.004-.002.014-.006a5.036 5.036 0 0 0 .197-.09 13.78 13.78 0 0 0 2.182-1.31c1.214-.896 2.691-2.322 3.178-4.268l-1.94-.486zm-4.03 5.243l.393-.92-.004-.002a3.079 3.079 0 0 1-.142-.065 11.785 11.785 0 0 1-1.85-1.113c-1.085-.8-2.108-1.874-2.427-3.143l-1.94.486c.489 1.946 1.966 3.371 3.179 4.267a13.784 13.784 0 0 0 2.181 1.31 8.056 8.056 0 0 0 .211.097l.005.002h.002l.392-.919zm-4.03-5.243c-.206-.822-.12-1.461.1-1.898.212-.421.59-.743 1.173-.889l-.485-1.94C.794-.626-.079.052-.569 1.026c-.482.956-.55 2.106-.254 3.283l1.94-.486zM2.39 1.036c.485-.12.88.08 1.26.507a3.495 3.495 0 0 1 .567.89l.003.008V2.44a.115.115 0 0 1-.001-.002l.928-.372c.929-.37.929-.371.929-.372l-.001-.002-.002-.004a1.532 1.532 0 0 0-.018-.044 5.473 5.473 0 0 0-.219-.443 5.49 5.49 0 0 0-.69-.987C4.525-.483 3.42-1.283 1.904-.904l.485 1.94zm2.757 1.03c.929.372.929.372.928.373a.06.06 0 0 1 0 .001v.002h-.001a.705.705 0 0 1 .027-.061 3.502 3.502 0 0 1 .544-.838c.38-.428.776-.628 1.26-.507l.485-1.94C6.875-1.283 5.77-.483 5.15.214a5.498 5.498 0 0 0-.928 1.473l-.002.004v.002c0 .001-.001.001.927.373zm2.758-1.03c.583.146.96.468 1.172.889.22.437.306 1.076.1 1.898l1.94.486c.295-1.178.228-2.327-.253-3.284C10.374.052 9.5-.626 8.39-.904l-.485 1.94z')
                     span.t-authorLikesCount 475
                 div.t-authorModalAbout
                     h1.t-authorModalAboutTitle.t-titleBig О себе
@@ -142,7 +182,19 @@ mixin authorsModal()
                 div.t-modalImgOverlay
                     div.t-modalButtonsHolder.t-hide.t-profileModalButtonsHolder
                         div.t-modalShare
+                            svg.t-whiteSvg(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                                use(xlink:href='#path0_fill5', fill='#FFF').t-svgBg
+                                use(xlink:href='#path1_stroke5', transform='translate(8 8)', fill='#E0E0E0').t-svgFigure
+                                defs
+                                    path#path0_fill5(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                                    path#path1_stroke5(d='M4 0l.707-.707a1 1 0 0 0-1.414 0L4 0zM3 5a1 1 0 0 0 2 0H3zM1 5a1 1 0 0 0-2 0h2zM0 8h-1a1 1 0 0 0 1 1V8zm8 0v1a1 1 0 0 0 1-1H8zm1-3a1 1 0 1 0-2 0h2zM1.293 1.293a1 1 0 0 0 1.414 1.414L1.293 1.293zm4 1.414a1 1 0 0 0 1.414-1.414L5.293 2.707zM3 0v5h2V0H3zm-4 5v3h2V5h-2zm1 4h8V7H0v2zm9-1V5H7v3h2zM2.707 2.707l2-2L3.293-.707l-2 2 1.414 1.414zm4-1.414l-2-2L3.293.707l2 2 1.414-1.414z')
                         div.t-modalBack
+                            svg.t-whiteSvg(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                                use(xlink:href='#path0_fill6', fill='#FFF').t-svgBg
+                                use(xlink:href='#path1_stroke6', transform='translate(7 8)', fill='#E0E0E0').t-svgFigure
+                                defs
+                                    path#path0_fill6(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                                    path#path1_stroke6(d='M0 3l-.707-.707a1 1 0 0 0 0 1.414L0 3zM3.707.707A1 1 0 0 0 2.293-.707L3.707.707zm-1.414 6a1 1 0 0 0 1.414-1.414L2.293 6.707zM8 8a1 1 0 1 0 2 0H8zM0 4h6V2H0v2zm6-1v1h-.002-.001-.003-.002H6l.058.003c.068.005.138.012.246.03.242.04.474.092.749.236C7.513 4.5 8 4.931 8 6h2c0-1.931-1.014-3-2.053-3.52a5.194 5.194 0 0 0-1.314-.42A5.192 5.192 0 0 0 6.025 2H6.004h-.002-.001L6 3zm-5.293.707l3-3L2.293-.707l-3 3L.707 3.707zm-1.414 0l3 3 1.414-1.414-3-3-1.414 1.414zM8 6v2h2V6H8z')
                             span Назад
 
 mixin authorArticles()
@@ -161,9 +213,30 @@ mixin newsModal()
         div.t-newsModalInfo
             div.t-newsColorBlock(style="background-color:#57C9FA")
             div.t-newsInsideHolder
-                div.t-modalButtonsHolder
-                    div.t-modalShare
+                div.t-modalButtonsHolder.t-modalNewsBtnsHolder
+                    div.t-modalBtnsCtrl
+                        div.t-modalShare
+                            svg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                                use(xlink:href='#path0_fill5', fill='#FFF').t-svgBg
+                                use(xlink:href='#path1_stroke5', transform='translate(8 8)', fill='#E0E0E0').t-svgFigure
+                                defs
+                                    path#path0_fill5(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                                    path#path1_stroke5(d='M4 0l.707-.707a1 1 0 0 0-1.414 0L4 0zM3 5a1 1 0 0 0 2 0H3zM1 5a1 1 0 0 0-2 0h2zM0 8h-1a1 1 0 0 0 1 1V8zm8 0v1a1 1 0 0 0 1-1H8zm1-3a1 1 0 1 0-2 0h2zM1.293 1.293a1 1 0 0 0 1.414 1.414L1.293 1.293zm4 1.414a1 1 0 0 0 1.414-1.414L5.293 2.707zM3 0v5h2V0H3zm-4 5v3h2V5h-2zm1 4h8V7H0v2zm9-1V5H7v3h2zM2.707 2.707l2-2L3.293-.707l-2 2 1.414 1.414zm4-1.414l-2-2L3.293.707l2 2 1.414-1.414z')
+                        div.t-modalFavorites
+                            svg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                                use(xlink:href='#path0_fillFav', fill='#FFF').t-svgBg
+                                use(xlink:href='#path1_strokeFav', transform='translate(9 8)', fill='#E0E0E0').t-svgFigure
+                                defs
+                                    path#path0_fillFav(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                                    path#path1_strokeFav(d='M7 0a1 1 0 0 0-2 0h2zM6 8l-.555.832A1 1 0 0 0 7 8H6zM0 8h-1a1 1 0 0 0 1.555.832L0 8zm1-8a1 1 0 1 0-2 0h2zm2 6l.555-.832a1 1 0 0 0-1.11 0L3 6zm2-6v8h2V0H5zM1 8V0h-2v8h2zm5.555-.832l-3-2-1.11 1.664 3 2 1.11-1.664zm-4.11-2l-3 2 1.11 1.664 3-2-1.11-1.664z')
+
                     div.t-modalBack
+                        svg(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                            use(xlink:href='#path0_fill6', fill='#FFF').t-svgBg
+                            use(xlink:href='#path1_stroke6', transform='translate(7 8)', fill='#E0E0E0').t-svgFigure
+                            defs
+                                path#path0_fill6(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                                path#path1_stroke6(d='M0 3l-.707-.707a1 1 0 0 0 0 1.414L0 3zM3.707.707A1 1 0 0 0 2.293-.707L3.707.707zm-1.414 6a1 1 0 0 0 1.414-1.414L2.293 6.707zM8 8a1 1 0 1 0 2 0H8zM0 4h6V2H0v2zm6-1v1h-.002-.001-.003-.002H6l.058.003c.068.005.138.012.246.03.242.04.474.092.749.236C7.513 4.5 8 4.931 8 6h2c0-1.931-1.014-3-2.053-3.52a5.194 5.194 0 0 0-1.314-.42A5.192 5.192 0 0 0 6.025 2H6.004h-.002-.001L6 3zm-5.293.707l3-3L2.293-.707l-3 3L.707 3.707zm-1.414 0l3 3 1.414-1.414-3-3-1.414 1.414zM8 6v2h2V6H8z')
                         span Назад
                 div.t-newsModalAuthorHolder
                     div.t-flexHolder
@@ -291,6 +364,16 @@ mixin mobileMneu()
                     a(href="http://tdsgn.ru/") Создано в Студии Т
 
 
+mixin search()
+    section.t-searchSection.t-absolute
+        div.t-searchField
+            input(type="text" placeholder="Ищите статьи")
+        ul.t-searchSorting
+        div.t-searchOutput
+
+
+
+
 doctype html
 html(lang="ru-RU")
     head
@@ -299,18 +382,18 @@ html(lang="ru-RU")
         meta(http-equiv="x-ua-compatible" content="ie=edge")
         title ЖТ
         link(rel='stylesheet', href="css/plugins/normalize.css")
-        link(rel='stylesheet', href="css/plugins/jquery.scrollbar.css")
-        link(rel='stylesheet', href="css/plugins/jInvertScroll.css")
         link(rel='stylesheet', href="css/main.min.css")
     body
+        div.cursor
         div.t-mainWrapper
             + hiddenLogo()
             block content
             + newsModal()
             + authorsModal()
             + mobileMneu()
+            + search()
 
         script(src="js/vendor.min.js")
-        script(src="js/plugins/jquery.scrollbar.min.js")
+        script(src="js/plugins/TweenLite.min.js")
         script(src="js/plugins/svg4everybody.min.js")
         script(src="js/main.min.js")
