--- a/projects/jtProject/frontend/sass/modules/main.sass
+++ b/projects/jtProject/frontend/sass/modules/main.sass
@@ -39,7 +39,6 @@ main
         transition: .3s ease
         object-fit: cover
     .t-newsCardInfoHolder
-
       position: absolute
       top: 0
       left: 0
@@ -98,29 +97,30 @@ main
             span
               @include fontsSizes(16, bold, 20)
               display: block
-    .t-newsParams
-      margin-bottom: 32px
-      ul
-        display: flex
-        li
-          color: $white
-          &:not(:last-child)
-            margin-right: 8px
-      &.duplicate
-        transition: .4s
-        position: absolute
-        left: 40px
-        top: 40px
-    .t-newsContentBody
-      padding: 40px
-    &:hover
-      .t-newsCardImg
-        img
-          filter: blur(25px)
-          transform: scale(1.3)
-      .t-newsCardInfoHolder
-        opacity: 1
-        transition-delay: .3s
-      .t-newsParams.duplicate
-        transition-delay: .4s
-        opacity: 0
+.t-newsParams
+  margin-bottom: 32px
+  ul
+    display: flex
+    li
+      display: flex
+      align-items: center
+      color: $dgrey
+      @include fontsSizes(14, bold, 17)
+      &:not(:last-child)
+        margin-right: 8px
+  &.duplicate
+    transition: .4s
+    position: absolute
+    left: 40px
+    top: 40px
+  &.t-white
+    ul
+      li
+        color: $white
+    svg
+      .t-svgBg
+        fill: transparent
+      .t-svgFigure
+        fill: $white
+.t-newsContentBody
+  padding: 40px
