--- a/projects/jtProject/frontend/sass/modules/topMainContent.sass
+++ b/projects/jtProject/frontend/sass/modules/topMainContent.sass
@@ -17,11 +17,9 @@
       padding: 0
       margin: 0
     .t-nameAndSortWrapper
-      float: left
-      width: 180px
+      width: 100%
       display: flex
       align-items: center
-      margin-right: 40px
       .t-namePage
         margin-right: 40px
       .t-topSortWrapper
