--- a/projects/jtProject/frontend/sass/styleModules/media.sass
+++ b/projects/jtProject/frontend/sass/styleModules/media.sass
@@ -8,6 +8,27 @@
   .t-smallModalMenu
     li:hover:not(:first-child)
       color: $dblue
+  .t-openSmallModalMenu
+    &:hover
+      .t-smallModalMenu
+        opacity: 1!important
+        pointer-events: all!important
+
+
+@media (min-width: 801px)
+  main
+    .t-newsCard
+      &:hover
+        .t-newsCardImg
+          img
+            filter: blur(25px)
+            transform: scale(1.3)
+        .t-newsCardInfoHolder
+          opacity: 1
+          transition-delay: .3s
+        .t-newsParams.duplicate
+          transition-delay: .4s
+          opacity: 0
 
 @media (max-width: 1440px)
   aside .t-menuWrapper, .t-mobileMenu .t-mobileMenuWrapper
@@ -63,8 +84,78 @@
 @media (max-width: 800px)
   *
     cursor: default!important
-  .cursor
-    display: none
+  main .t-newsCardWrapper
+    height: auto
+    flex: auto
+    max-width: 400px
+    width: 100%
+    .t-newsParams.duplicate
+      display: none
+    .t-newsParams.t-special
+      margin: 0 auto!important
+      li
+        color: $dgrey!important
+        svg
+          .t-svgFigure
+            fill: $dgrey!important
+
+    .t-newsCardImg
+      height: 221px
+      img
+        object-position: top
+    .t-newsCardInfoHolder
+      margin-top: 8px
+      position: static
+      left: auto
+      right: auto
+      top: auto
+      bottom: auto
+      opacity: 1
+      color: $tBlackSec
+      .t-newsContentBody
+        padding: 0
+        display: flex
+        flex-direction: column
+        .t-newsParams
+          margin: 0
+          order: 2
+          li
+            color: $tBlackSec
+        .t-newsTitle
+          order: 1
+          margin: 0 0 16px 0
+          &:before
+            display: none!important
+        .t-newsAuthorHolder, .t-newsCategory, .t-newsTags, .t-newsDate, .t-newsContentShare
+          display: none
+  .t-smallModalMenu
+    position: fixed
+    left: auto
+    top: 0
+    right: 0
+    bottom: auto
+    height: 100vh
+    overflow-y: auto
+    width: 288px
+    @include forEaseAnim(1, translateX(150%), none)
+    padding: 35px 24px 35px 32px
+    transition: .7s ease-in-out
+    .t-smallModalMenuMobileTitleWrapper
+      display: flex
+      align-items: center
+      justify-content: space-between
+      margin-bottom: 32px
+      .t-smallModalMenuMobileTitle
+        @include fontsSizes(14, bold, 17)
+
+  .t-mainTopContent
+    .t-mainTopContentInside
+      .t-nameAndSortWrapper
+        justify-content: space-between
+  .t-mainTopContent
+    .t-mainTopContentInside
+      height: auto
+      padding: 0
   .t-authorModal
     .t-hiddenLogoWrapper.activateBg
       background-color: transparent
@@ -74,37 +165,35 @@
         display: none!important
   .t-sortMenuHolder
     max-width: 65px
-  .t-logoWrapper .t-logo
-    width: 87px
-    height: 48px
-    background-position: center
-    background-size: contain
+  .t-logoWrapper
+    margin-left: 24px
+    .t-logo
+      width: 44px
+      height: 24px
+      background-position: center
+      background-size: contain
   .t-mainMain
     padding: 0
   .t-articlesWrapper, .t-authorsWrapper
     padding-left: 24px
+  .t-authorsWrapper
+    .t-mainCardsHolder
+      padding: 0
   aside
     display: none
-  .t-mainCardsHolder.t-mainPageCardCtrl
-    overflow-x: scroll
+  .t-mainCardsHolder
+    &.t-mainPageCardCtrl
+      overflow-x: scroll
+    left: 0!important
+    position: static!important
+    transform: none!important
   .t-leftAndMidContentContainer
     width: auto
     display: flex
   .t-mainTopContent
-    margin-top: 21px
+    margin-top: 8px
     margin-bottom: 24px
     padding: 0 24px
-    .t-mainTopContentInside
-      padding: 0
-      height: auto
-      .t-nameAndSortWrapper
-        width: auto
-        position: relative
-        .t-namePage
-          position: absolute
-          top: -21px
-  .t-topMiddleSection
-    width: auto!important
   .t-mobHeader
     padding: 17px 24px 23px 24px
     display: flex
@@ -121,6 +210,21 @@
         margin-right: 16px
 
 @media (max-width: 768px)
+  .t-mobileMenu
+    padding: 32px 24px
+    width: 288px
+    .t-logoSection
+      .t-backSmallMenuBtn
+        display: block
+      .t-logoWrapper
+        margin: 0
+    .t-logoSection, nav, .t-copyWrapper
+      padding: 0
+    .t-mobileMenuWrapper
+      margin-top: 32px
+    nav, .t-copyWrapper
+      padding-left: 10px
+
   .t-modalNewsBtnsHolder
     top: 42px!important
     right: 24px!important
@@ -206,6 +310,8 @@
     width: 100%
 
 @media (max-width: 500px)
+  main .t-newsCardWrapper .t-newsCardInfoHolder .t-newsContentBody .t-newsTitle
+    @include fontsSizes(20, bold, 24)
   .t-newsModal .t-newsModalTitle
     @include fontsSizes(30, bold, 37)
     &:after
@@ -234,3 +340,10 @@
         @include fontsSizes(16, normal, 20)
     .t-authorArticlesHolder .t-authorModalArticleCard .t-authorArticleCardImg
       display: none
+
+
+@media (max-width: 470px)
+  main .t-newsCardWrapper
+    width: 272px
+    .t-newsCardImg
+      width: 272px
