--- a/projects/jtProject/frontend/templates/_layout.jade
+++ b/projects/jtProject/frontend/templates/_layout.jade
@@ -4,23 +4,13 @@ mixin card (changeImage)
             span.t-newsDate 14 января
             span.t-newsCategory Категория
         div.t-newsCard
-            div.t-newsParams.duplicate
-                ul
-                    li 475
-                    li 987
-                    li 340K
-                    li 2M
+            + stateCount('duplicate', 't-white', 't-whiteSvg')
             div.t-newsCardImg
                 img(src=""+ changeImage +"")
             div.t-newsCardInfoHolder
                 div.t-newsContent
                     div.t-newsContentBody
-                        div.t-newsParams
-                            ul
-                                li 475
-                                li 987
-                                li 340K
-                                li 2M
+                        + stateCount('', 't-white', 't-whiteSvg', 't-special')
                         h1.t-newsTitle Заголовок статьи например, не в одну, а в три строки
                         div.t-newsAuthorHolder
                             div.t-newsAuthorImg
@@ -38,8 +28,20 @@ mixin card (changeImage)
                             li программирование
                         span.t-newsDate 14 января
                         div.t-newsContentShare
-                            span Ico
-                            span Ico
+                            span
+                                svg.t-whiteSvg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                                    use(xlink:href='#path0_fill5', fill='#FFF').t-svgBg
+                                    use(xlink:href='#path1_stroke5', transform='translate(8 8)', fill='#E0E0E0').t-svgFigure
+                                    defs
+                                        path#path0_fill5(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                                        path#path1_stroke5(d='M4 0l.707-.707a1 1 0 0 0-1.414 0L4 0zM3 5a1 1 0 0 0 2 0H3zM1 5a1 1 0 0 0-2 0h2zM0 8h-1a1 1 0 0 0 1 1V8zm8 0v1a1 1 0 0 0 1-1H8zm1-3a1 1 0 1 0-2 0h2zM1.293 1.293a1 1 0 0 0 1.414 1.414L1.293 1.293zm4 1.414a1 1 0 0 0 1.414-1.414L5.293 2.707zM3 0v5h2V0H3zm-4 5v3h2V5h-2zm1 4h8V7H0v2zm9-1V5H7v3h2zM2.707 2.707l2-2L3.293-.707l-2 2 1.414 1.414zm4-1.414l-2-2L3.293.707l2 2 1.414-1.414z')
+                            span
+                                svg.t-whiteSvg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                                    use(xlink:href='#path0_fillFav', fill='#FFF').t-svgBg
+                                    use(xlink:href='#path1_strokeFav', transform='translate(9 8)', fill='#E0E0E0').t-svgFigure
+                                    defs
+                                        path#path0_fillFav(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                                        path#path1_strokeFav(d='M7 0a1 1 0 0 0-2 0h2zM6 8l-.555.832A1 1 0 0 0 7 8H6zM0 8h-1a1 1 0 0 0 1.555.832L0 8zm1-8a1 1 0 1 0-2 0h2zm2 6l.555-.832a1 1 0 0 0-1.11 0L3 6zm2-6v8h2V0H5zM1 8V0h-2v8h2zm5.555-.832l-3-2-1.11 1.664 3 2 1.11-1.664zm-4.11-2l-3 2 1.11 1.664 3-2-1.11-1.664z')
 
 
 mixin authorCard(changeImg, name, profession, count, likes)
@@ -69,46 +71,41 @@ mixin authorCard(changeImg, name, profession, count, likes)
 
 mixin topCard(pageName, listOne, listTwo, listThird, listFour, listFive, listSix)
     div.t-mainTopContentInside
-        div.t-leftAndMidContentContainer
-            div.t-nameAndSortWrapper
-                span.t-namePage= pageName
-                div.t-topSortWrapper
-                    span.t-topSortName По дате
-                    div.t-dotsHolder
-                        span
-            div.t-topListCtrlWrapper.t-topMiddleSection
-                div.t-sortMenuHolder
-                    ul.t-topListCtrl.t-topListSorting
+        div.t-nameAndSortWrapper
+            span.t-namePage= pageName
+            div.t-openSmallModalMenu
+                svg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                    use(xlink:href='#path0_fillFil', fill='#FFF').t-svgBg
+                    use(xlink:href='#path1_strokeFil', transform='translate(7 9)', fill='#E0E0E0').t-svgFigure
+                    defs
+                        path#path0_fillFil(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                        path#path1_strokeFil(d='M10 0l.707.707A1 1 0 0 0 10-1v1zM0 0v-1A1 1 0 0 0-.707.707L0 0zm4 8a1 1 0 1 0 2 0H4zm6-9H0v2h10v-2zM-.707.707l5 5 1.414-1.414-5-5L-.707.707zM4 5v3h2V5H4zm1.707.707l5-5L9.293-.707l-5 5 1.414 1.414z')
+                div.t-smallModalMenu
+                    div.t-smallModalMenuMobileTitleWrapper
+                        h5.t-smallModalMenuMobileTitle Фильтр и сортировка
+                        svg.t-backSmallMenuBtn(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                            use(xlink:href='#path0_fill6', fill='#FFF').t-svgBg
+                            use(xlink:href='#path1_stroke6', transform='translate(7 8)', fill='#E0E0E0').t-svgFigure
+                            defs
+                                path#path0_fill6(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                                path#path1_stroke6(d='M0 3l-.707-.707a1 1 0 0 0 0 1.414L0 3zM3.707.707A1 1 0 0 0 2.293-.707L3.707.707zm-1.414 6a1 1 0 0 0 1.414-1.414L2.293 6.707zM8 8a1 1 0 1 0 2 0H8zM0 4h6V2H0v2zm6-1v1h-.002-.001-.003-.002H6l.058.003c.068.005.138.012.246.03.242.04.474.092.749.236C7.513 4.5 8 4.931 8 6h2c0-1.931-1.014-3-2.053-3.52a5.194 5.194 0 0 0-1.314-.42A5.192 5.192 0 0 0 6.025 2H6.004h-.002-.001L6 3zm-5.293.707l3-3L2.293-.707l-3 3L.707 3.707zm-1.414 0l3 3 1.414-1.414-3-3-1.414 1.414zM8 6v2h2V6H8z')
+                    h4.t-smallModalTitle Тема
+                    ul.t-smallFilterMenu.t-smallModalList
                         li
-                            a(href="#").t-topSortLinks.active= listOne
+                            a(href="#") Все темы
                         li
-                            a(href="#").t-topSortLinks= listTwo
+                            a(href="#") Бизнес
                         li
-                            a(href="#").t-topSortLinks= listThird
+                            a(href="#") Дизайн
                         li
-                            a(href="#").t-topSortLinks= listFour
-                        li
-                            a(href="#").t-topSortLinks= listFive
-                        li
-                            a(href="#").t-topSortLinks= listSix
-                div.t-dotsHolder.t-callHiddenSortingMenu
-                    span
-                    ul.t-smallModalMenu.t-sortModalContainer
-                        li
-                            ul.js-menu-more
-                                li
+                            a(href="#") Продажа
 
-                                li= listTwo
-                                li= listThird
-                                li= listFour
-                                li= listFive
-                                li= listSix
-                        li Бизнес
-                        li Дизайн
-                        li Шняга
-                        li Еще
-                        li Дичь
-                        li Дичь2
+                    h4.t-smallModalTitle Сортировка
+                    ul.t-smallSortMenu.t-smallModalList
+                        li
+                            a(href="#") По дате
+                        li
+                            a(href="#") По популярности
         ul.t-topListCtrl.t-topRightSection
             li
                 svg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
@@ -182,7 +179,7 @@ mixin authorsModal()
                 div.t-modalImgOverlay
                     div.t-modalButtonsHolder.t-hide.t-profileModalButtonsHolder
                         div.t-modalShare
-                            svg.t-whiteSvg(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                            svg.t-whiteSvg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
                                 use(xlink:href='#path0_fill5', fill='#FFF').t-svgBg
                                 use(xlink:href='#path1_stroke5', transform='translate(8 8)', fill='#E0E0E0').t-svgFigure
                                 defs
@@ -254,12 +251,7 @@ mixin newsModal()
                         li CEO,
                         li Программирование,
                     span.t-newsModalDate 14 января
-                    div.t-newsParams.t-newsModalParams
-                        ul
-                            li 475
-                            li 987
-                            li 340K
-                            li 2M
+                    + stateCount('t-newsModalParams')
                 h1.t-newsModalTitle.t-titleUltraMegaLarge.t-transform Заголовок статьи, например не в одну, а в три строки
                 div.t-newsModalMainInfo
                     h2.t-newsModalMainInfoTitle.t-titleLarge Заголовок
@@ -312,6 +304,46 @@ mixin newsModal()
                             div.t-commentsiItemChildren
 
 
+mixin stateCount(thisCls, color, svgClass, special)
+    div.t-newsParams(class=thisCls class=color class=special)
+        ul
+            li
+                svg(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink' class=svgClass)
+                    use(xlink:href='#path0_fill4', fill='#FFF').t-svgBg
+                    use(xlink:href='#path1_stroke4', transform='translate(6.85 7.93)', fill='#E0E0E0').t-svgFigure
+                    defs
+                        path#path0_fill4(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                        path#path1_stroke4(d='M10.147 4.066l.97.243-.97-.243zm-5 5l-.391.92a1 1 0 0 0 .783 0l-.392-.92zm-5-5l-.97.243.97-.243zm5-2l-.928.371a1 1 0 0 0 1.857 0l-.929-.37zm-3-2l-.242-.97.242.97zm6 0l.243-.97-.243.97zm1.03 3.757c-.317 1.269-1.34 2.343-2.425 3.144A11.781 11.781 0 0 1 4.9 8.079a6.101 6.101 0 0 1-.142.065l-.004.002.392.92.393.92.002-.001.004-.002.014-.006a5.036 5.036 0 0 0 .197-.09 13.78 13.78 0 0 0 2.182-1.31c1.214-.896 2.691-2.322 3.178-4.268l-1.94-.486zm-4.03 5.243l.393-.92-.004-.002a3.079 3.079 0 0 1-.142-.065 11.785 11.785 0 0 1-1.85-1.113c-1.085-.8-2.108-1.874-2.427-3.143l-1.94.486c.489 1.946 1.966 3.371 3.179 4.267a13.784 13.784 0 0 0 2.181 1.31 8.056 8.056 0 0 0 .211.097l.005.002h.002l.392-.919zm-4.03-5.243c-.206-.822-.12-1.461.1-1.898.212-.421.59-.743 1.173-.889l-.485-1.94C.794-.626-.079.052-.569 1.026c-.482.956-.55 2.106-.254 3.283l1.94-.486zM2.39 1.036c.485-.12.88.08 1.26.507a3.495 3.495 0 0 1 .567.89l.003.008V2.44a.115.115 0 0 1-.001-.002l.928-.372c.929-.37.929-.371.929-.372l-.001-.002-.002-.004a1.532 1.532 0 0 0-.018-.044 5.473 5.473 0 0 0-.219-.443 5.49 5.49 0 0 0-.69-.987C4.525-.483 3.42-1.283 1.904-.904l.485 1.94zm2.757 1.03c.929.372.929.372.928.373a.06.06 0 0 1 0 .001v.002h-.001a.705.705 0 0 1 .027-.061 3.502 3.502 0 0 1 .544-.838c.38-.428.776-.628 1.26-.507l.485-1.94C6.875-1.283 5.77-.483 5.15.214a5.498 5.498 0 0 0-.928 1.473l-.002.004v.002c0 .001-.001.001.927.373zm2.758-1.03c.583.146.96.468 1.172.889.22.437.306 1.076.1 1.898l1.94.486c.295-1.178.228-2.327-.253-3.284C10.374.052 9.5-.626 8.39-.904l-.485 1.94z')
+                span 475
+            li
+                svg(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink' class=svgClass)
+                    use(xlink:href='#path0_fillView', fill='#FFF').t-svgBg
+                    use(xlink:href='#path1_fillView', transform='translate(5.34 7)', fill='#E0E0E0').t-svgFigure
+                    defs
+                        path#path0_fillView(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                        path#path1_fillView(fill-rule='evenodd', d='M2.871 3.735a5.02 5.02 0 0 0-.93 1.598.998.998 0 1 1-1.883-.666 7.002 7.002 0 0 1 13.204 0 1.001 1.001 0 0 1-1.887.666 5.006 5.006 0 0 0-.914-1.58A3.999 3.999 0 0 1 6.66 9c-2.212 0-4-1.79-4-4 0-.44.077-.87.21-1.265zM8.661 5a2 2 0 1 1-4 .001 2 2 0 0 1 4-.001z')
+
+                span 987
+            li
+                svg(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink' class=svgClass)
+                    use(xlink:href='#path0_fillCom', fill='#FFF').t-svgBg
+                    use(xlink:href='#path1_fillCom', transform='translate(6 7)', fill='#E0E0E0').t-svgFigure
+                    defs
+                        path#path0_fillCom(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                        path#path1_fillCom(fill-rule='evenodd', d='M0 1a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H8.414l-1.707 1.707a1 1 0 0 1-1.414 0L3.586 9H1a1 1 0 0 1-1-1V1zm2 1v5h2a1 1 0 0 1 .707.293L6 8.586l1.293-1.293A1 1 0 0 1 8 7h2V2H2z')
+
+                span 340K
+            li
+                svg(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink' class=svgClass)
+                    use(xlink:href='#path0_fill', fill='#FFF').t-svgBg
+                    use(xlink:href='#path1_fill', transform='translate(6 6)', fill='#E0E0E0').t-svgFigure
+                    defs
+                        path#path0_fill(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                        path#path1_fill(fill-rule='evenodd', d='M2 6c0-2.21 1.79-4 4-4s4 1.79 4 4-1.79 4-4 4-4-1.79-4-4zm4-6a6 6 0 1 0 .002 12.002A6 6 0 0 0 6 0zm1 4a1.001 1.001 0 0 0-2 0v2a1 1 0 0 0 .293.707l1 1a1 1 0 1 0 1.414-1.414L7 5.586V4z')
+
+                span 2M
+
+
 mixin hiddenLogo()
     div.t-hiddenLogoWrapper
         div.t-burger.t-burgerMob
@@ -329,6 +361,12 @@ mixin mobileMneu()
             section.t-logoSection
                 a(href="/").t-logoWrapper
                     div.t-logo
+                svg.t-backSmallMenuBtn(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                    use(xlink:href='#path0_fill6', fill='#FFF').t-svgBg
+                    use(xlink:href='#path1_stroke6', transform='translate(7 8)', fill='#E0E0E0').t-svgFigure
+                    defs
+                        path#path0_fill6(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                        path#path1_stroke6(d='M0 3l-.707-.707a1 1 0 0 0 0 1.414L0 3zM3.707.707A1 1 0 0 0 2.293-.707L3.707.707zm-1.414 6a1 1 0 0 0 1.414-1.414L2.293 6.707zM8 8a1 1 0 1 0 2 0H8zM0 4h6V2H0v2zm6-1v1h-.002-.001-.003-.002H6l.058.003c.068.005.138.012.246.03.242.04.474.092.749.236C7.513 4.5 8 4.931 8 6h2c0-1.931-1.014-3-2.053-3.52a5.194 5.194 0 0 0-1.314-.42A5.192 5.192 0 0 0 6.025 2H6.004h-.002-.001L6 3zm-5.293.707l3-3L2.293-.707l-3 3L.707 3.707zm-1.414 0l3 3 1.414-1.414-3-3-1.414 1.414zM8 6v2h2V6H8z')
             div.t-mobileMenuWrapper
                 nav
                     ul.t-menuList
@@ -384,7 +422,6 @@ html(lang="ru-RU")
         link(rel='stylesheet', href="css/plugins/normalize.css")
         link(rel='stylesheet', href="css/main.min.css")
     body
-        div.cursor
         div.t-mainWrapper
             + hiddenLogo()
             block content
