--- a/projects/jtProject/frontend/templates/index.jade
+++ b/projects/jtProject/frontend/templates/index.jade
@@ -9,8 +9,8 @@ block content
         section.t-articlesWrapper
             div.t-scrollContainer
                 div.t-mainCardsHolder.t-mainPageCardCtrl
-                    + card('/images/png/Frame.png')
+                    + card('images/png/Frame.png')
                     + card('http://www.pbs.org/wgbh/nova/next/wp-content/uploads/2017/06/quantum-entanglement_2048x1152.jpg')
                     + card('https://fsmedia.imgix.net/7c/64/de/56/fb79/497e/b8ca/d146bcdd00ab/space-genetics-is-essential-making-life-in-space-work.jpeg')
                     - for(var i = 0; i < 15; i++)
-                        + card('/images/png/Frame.png')
+                        + card('images/png/Frame.png')
