--- a/projects/jtProject/frontend/templates/_layout.jade
+++ b/projects/jtProject/frontend/templates/_layout.jade
@@ -404,6 +404,7 @@ mixin mobileMneu()
 
 mixin search()
     section.t-searchSection.t-absolute
+        div.t-sloseBtn
         div.t-searchField
             input(type="text" placeholder="Ищите статьи")
         ul.t-searchSorting
