--- a/projects/jtProject/frontend/sass/main.sass
+++ b/projects/jtProject/frontend/sass/main.sass
@@ -9,4 +9,5 @@
 @import "modules/authorModal"
 @import "modules/newsModal"
 @import "modules/search"
+@import "modules/other"
 @import "styleModules/media"
