--- a/projects/jtProject/frontend/templates/_layout.jade
+++ b/projects/jtProject/frontend/templates/_layout.jade
@@ -69,7 +69,7 @@ mixin authorCard(changeImg, name, profession, count, likes)
 
                     span.t-authorLikesCount= likes
 
-mixin topCard(pageName, listOne, listTwo, listThird, listFour, listFive, listSix)
+mixin topCard(pageName)
     div.t-mainTopContentInside
         div.t-nameAndSortWrapper
             span.t-namePage= pageName
@@ -106,33 +106,7 @@ mixin topCard(pageName, listOne, listTwo, listThird, listFour, listFive, listSix
                             a(href="#") По дате
                         li
                             a(href="#") По популярности
-        ul.t-topListCtrl.t-topRightSection
-            li
-                svg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
-                    use(xlink:href='#path0_fill1', fill='#FFF').t-svgBg
-                    use(xlink:href='#path1_fill1', transform='translate(8 6)', fill='#E0E0E0').t-svgFigure
-                    defs
-                        path#path0_fill1(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
-                        path#path1_fill1(fill-rule='evenodd', d='M0 1a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2a1 1 0 0 1-2 0V2H2v7a1 1 0 1 1-2 0V1zm7 5a1 1 0 0 1 1 1v1h1a1 1 0 1 1 0 2H8v1a1 1 0 1 1-2 0v-1H5a1 1 0 1 1 0-2h1V7a1 1 0 0 1 1-1z')
-
-
-            li
-                svg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
-                    use(xlink:href='#path0_fill2', fill='#FFF').t-svgBg
-                    use(xlink:href='#path1_fill2', transform='translate(7 6)', fill='#E0E0E0').t-svgFigure
-                    defs
-                        path#path0_fill2(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
-                        path#path1_fill2(fill-rule='evenodd', d='M7.005 4a2 2 0 1 1-3.999.001 2 2 0 0 1 4-.001zm.914 2.742A3.979 3.979 0 0 0 9.005 4c0-2.209-1.789-4-4-4-2.21 0-4 1.791-4 4 0 1.062.41 2.026 1.086 2.742a5.991 5.991 0 0 0-1.89 1.66 1 1 0 1 0 1.601 1.2A3.986 3.986 0 0 1 5.002 8c1.312 0 2.472.627 3.202 1.602.332.442.961.531 1.403.2a1 1 0 0 0 .199-1.4 6.082 6.082 0 0 0-1.887-1.66z')
-
-
-
-            li.t-searchBtn
-                svg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
-                    use(xlink:href='#path0_fill3', fill='#FFF').t-svgBg
-                    use(xlink:href='#path1_fill3', transform='translate(7 6)', fill='#E0E0E0').t-svgFigure
-                    defs
-                        path#path0_fill3(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
-                        path#path1_fill3(fill-rule='evenodd', d='M9 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0zm2 0a5 5 0 0 1-7.758 4.171l-1.535 1.536A1 1 0 1 1 .293 9.293l1.535-1.536A5 5 0 1 1 11 5z')
+        + rightSection()
 
 
 
@@ -355,6 +329,17 @@ mixin hiddenLogo()
         div.t-pageNameHolder
             span.t-pageHiddenName
 
+mixin Logo(pageName)
+    div.t-logoSection.t-headerLogo
+        div.t-burger.t-burgerMob
+            span.line
+            span.line
+            span.line
+        a(href="/").t-logoWrapper
+            div.t-logo
+        div.t-pageNameHolder
+            span.t-pageName=pageName
+
 mixin mobileMneu()
     div.t-mobileMenu
         div.t-mobileInsideHolder
@@ -410,7 +395,35 @@ mixin search()
         ul.t-searchSorting
         div.t-searchOutput
 
+mixin rightSection()
+    ul.t-topListCtrl.t-topRightSection
+        li
+            svg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                use(xlink:href='#path0_fill1', fill='#FFF').t-svgBg
+                use(xlink:href='#path1_fill1', transform='translate(8 6)', fill='#E0E0E0').t-svgFigure
+                defs
+                    path#path0_fill1(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                    path#path1_fill1(fill-rule='evenodd', d='M0 1a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2a1 1 0 0 1-2 0V2H2v7a1 1 0 1 1-2 0V1zm7 5a1 1 0 0 1 1 1v1h1a1 1 0 1 1 0 2H8v1a1 1 0 1 1-2 0v-1H5a1 1 0 1 1 0-2h1V7a1 1 0 0 1 1-1z')
 
+
+        li.t-profile
+            a(href="/profile.html")
+                svg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                    use(xlink:href='#path0_fill2', fill='#FFF').t-svgBg
+                    use(xlink:href='#path1_fill2', transform='translate(7 6)', fill='#E0E0E0').t-svgFigure
+                    defs
+                        path#path0_fill2(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                        path#path1_fill2(fill-rule='evenodd', d='M7.005 4a2 2 0 1 1-3.999.001 2 2 0 0 1 4-.001zm.914 2.742A3.979 3.979 0 0 0 9.005 4c0-2.209-1.789-4-4-4-2.21 0-4 1.791-4 4 0 1.062.41 2.026 1.086 2.742a5.991 5.991 0 0 0-1.89 1.66 1 1 0 1 0 1.601 1.2A3.986 3.986 0 0 1 5.002 8c1.312 0 2.472.627 3.202 1.602.332.442.961.531 1.403.2a1 1 0 0 0 .199-1.4 6.082 6.082 0 0 0-1.887-1.66z')
+
+
+
+        li.t-searchBtn
+            svg.t-hoverable(width='24', height='24', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink')
+                use(xlink:href='#path0_fill3', fill='#FFF').t-svgBg
+                use(xlink:href='#path1_fill3', transform='translate(7 6)', fill='#E0E0E0').t-svgFigure
+                defs
+                    path#path0_fill3(d='M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z')
+                    path#path1_fill3(fill-rule='evenodd', d='M9 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0zm2 0a5 5 0 0 1-7.758 4.171l-1.535 1.536A1 1 0 1 1 .293 9.293l1.535-1.536A5 5 0 1 1 11 5z')
 
 
 doctype html
