--- a/projects/jtProject/frontend/sass/modules/other.sass
+++ b/projects/jtProject/frontend/sass/modules/other.sass
@@ -22,6 +22,7 @@
     padding: 0
 
 .t-profileMain
+  width: 100%
   margin-top: 44px
 
 .t-profileWrapperContainer
@@ -62,6 +63,7 @@
           color: $tBlackSec
           @include fontsSizes(16, bold, 20)
       .t-infoHolder
+        background-color: transparent
         color: $tBlack
         @include fontsSizes(16, normal, 20)
         outline: none
