--- a/projects/jtProject/frontend/sass/modules/newsModal.sass
+++ b/projects/jtProject/frontend/sass/modules/newsModal.sass
@@ -1,5 +1,7 @@
 .t-newsModal
   display: none
+  .t-line
+    margin-top: 80px
   &.turnAnimation
     .t-newsColorBlock
       animation: animationLeft 1s ease-in-out
@@ -142,7 +144,22 @@
       color: $lgreySec
       margin-top: 40px
   .t-likeBlockWrapper
-    margin: 120px 0 80px 0
+    margin: 26px 0 80px 0
+    display: flex
+    flex-wrap: wrap
+    .t-likeBlockItem
+      display: flex
+      align-items: center
+      &:not(:last-child)
+        margin-right: 16px
+      svg
+        margin-right: 8px
+      &:hover
+       svg
+         .t-svgBg
+           fill: $dblue
+         .t-svgFigure
+           fill: $white
     .t-likesTitle
       margin-bottom: 16px
     .t-likesContainer
@@ -152,12 +169,33 @@
         margin-right: 16px
   .t-commentBlock
     .t-commentsFilter
+      position: relative
       display: flex
       align-items: center
     .t-commentsContent
       margin-top: 33px
+    .t-commentsSortBtn
+      &:hover
+        .t-smallModalMenuStandart
+          opacity: 1
+          pointer-events: all
+
+.t-commentsAnswerField
+  margin-top: 44px
+  .t-sendCommentBtnHolder
+    margin-top: 16px
+    .t-commentHelp
+      color: $dgrey
+      @include fontsSizes(14, normal, 16)
+      margin-left: 16px
+
 
 .t-commentsItem
+  .t-commentsAuthorHolder
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 8px
   .t-commentsAuthor
     display: flex
     .t-commentsAuthorImg
@@ -172,6 +210,7 @@
         object-fit: cover
     .t-commentsAuthorInfo
       .t-commentsAuthorName
+        margin-bottom: 4px
         color: $tBlack
         @include fontsSizes(16, bold, 20)
     .t-commentsAuthorDateAnditemHolder
@@ -182,3 +221,16 @@
         color: $dgrey
       .t-commentsAuthorAnswerTo
         margin-left: 16px
+  .t-commentsRating
+    display: flex
+    align-items: center
+    .t-outputRating
+      margin: 0 8px
+      display: block
+      color: $dgrey
+  .t-commentsCommentHolder
+    margin-bottom: 8px
+    .t-commentOutput
+      color: $tBlack
+      @include fontsSizes(16, normal, 19)
+
