--- a/projects/jtProject/frontend/sass/_default.sass
+++ b/projects/jtProject/frontend/sass/_default.sass
@@ -357,10 +357,7 @@ svg.t-hoverable
   padding-bottom: 16px
   border-bottom: 1px solid $lgrey
   color: #1a1a1a
-  &::-webkit-input-placeholder,
-  &::-moz-placeholder,
-  &:-ms-input-placeholder,
-  &:-moz-placeholder
+  &::-webkit-input-placeholder
     color: $lgreySec
 
 .t-customLink
