--- a/projects/jtProject/frontend/sass/main.sass
+++ b/projects/jtProject/frontend/sass/main.sass
@@ -10,4 +10,5 @@
 @import "modules/newsModal"
 @import "modules/search"
 @import "modules/other"
+@import "modules/addArticle"
 @import "styleModules/media"
