--- a/projects/jtProject/frontend/sass/modules/search.sass
+++ b/projects/jtProject/frontend/sass/modules/search.sass
@@ -20,3 +20,14 @@
       &:-moz-placeholder
         text-align: center
         color: $lgreySec
+
+
+.t-searchClose
+  position: absolute
+  top: 67px
+  right: 56px
+  display: flex
+  align-items: center
+  span
+    margin-left: 8px
+    color: #CCCCCC
