--- a/projects/jtProject/frontend/sass/_default.sass
+++ b/projects/jtProject/frontend/sass/_default.sass
@@ -267,6 +267,7 @@ svg.t-hoverable
 
 .t-smallModalMenu, .t-smallModalMenuStandart
   position: absolute
+  border-radius: 2px
   display: flex
   flex-direction: column
   width: 152px
