--- a/projects/jtProject/frontend/sass/styleModules/media.sass
+++ b/projects/jtProject/frontend/sass/styleModules/media.sass
@@ -268,6 +268,9 @@
     .t-addArticleClose
       top: 24px
       right: 24px
+  .t-searchClose
+    top: 24px
+    right: 24px
 
   .t-profileWrapperContainer
     flex-direction: column
@@ -276,6 +279,12 @@
       padding: 0 24px
       .t-profileImgHolder
         margin: 0 auto
+        .t-changeProfileImgHolder
+          .t-smallProfileMenu
+            left: 0
+            right: 0
+            top: 0
+            border-radius: 0
     .t-profileSettingsAndInfo
       padding: 0 24px
   .t-mobileMenu
