--- a/projects/jtProject/frontend/sass/modules/other.sass
+++ b/projects/jtProject/frontend/sass/modules/other.sass
@@ -33,14 +33,56 @@
     padding: 0 40px 0 64px
     border-right: 1px solid $lgrey
     .t-profileImgHolder
-      width: 272px
-      height: 272px
+      width: 272px!important
+      height: 272px!important
       border-radius: 8px
       img
         width: 100%
         height: 100%
         object-fit: cover
         border-radius: 8px
+      .t-changeProfileImgHolder
+        display: flex
+        justify-content: flex-end
+        padding: 16px 16px 0 0
+        position: relative
+        .t-changePhotoWrapper
+          width: 24px
+          height: 24px
+          &:hover
+            .t-smallProfileMenu
+              opacity: 1
+              pointer-events: all
+        svg
+          .t-svgBg
+            fill: $white!important
+        .t-smallProfileMenu
+          position: absolute
+          border-radius: 2px
+          min-width: 152px
+          height: auto
+          padding: 16px
+          right: -130px
+          top: 16px
+          z-index: 3
+          background-color: $white
+          color: #333
+          transition: .4s ease
+          @include fontsSizes(14, normal, 17)
+          box-shadow: 0 4px 48px rgba(33,81,231,.14)
+          opacity: 0
+          pointer-events: none
+          ul
+            list-style: none
+            padding: 0
+            display: block
+            li
+              color: #333
+              @include fontsSizes(14, normal, 17)
+              &:not(:last-child)
+                margin-bottom: 8px
+              &:hover
+                color: $dblue
 
   .t-profileSettingsAndInfo
     padding: 0 0 0 40px
