--- a/projects/jtProject/frontend/sass/_default.sass
+++ b/projects/jtProject/frontend/sass/_default.sass
@@ -320,6 +320,16 @@ svg.t-hoverable
   .t-smallModalMenuMobileTitleWrapper
     display: none
 
+.t-closePos
+  position: absolute
+  top: 67px
+  right: 56px
+  display: flex
+  align-items: center
+  span
+    margin-left: 8px
+    color: #CCCCCC!important
+
 .cursor
   .dot
     position: absolute
@@ -358,6 +368,14 @@ svg.t-hoverable
     -ms-transform: scale(0,0)
     -webkit-transform: scale(0,0)
     transform: scale(0,0)
+
+.medium-insert-buttons-addons a
+  display: block
+.medium-insert-buttons-show
+  display: inline-block
+
+.medium-insert-embeds-toolbar, .medium-insert-images-toolbar
+  display: none!important
 
 
 .t-sortingLinks
