--- a/projects/jtProject/frontend/sass/main.sass
+++ b/projects/jtProject/frontend/sass/main.sass
@@ -10,5 +10,6 @@
 @import "modules/newsModal"
 @import "modules/search"
 @import "modules/other"
+@import "modules/authSection"
 @import "modules/addArticle"
 @import "styleModules/media"
