--- a/projects/jtProject/frontend/sass/styleModules/media.sass
+++ b/projects/jtProject/frontend/sass/styleModules/media.sass
@@ -260,6 +260,8 @@
         margin-right: 16px
 
 @media (max-width: 768px)
+  .t-mobileMenu nav .t-menuList .t-menuListItem.active:before
+      left: -34px
   .t-authSection .t-authContainer .t-authBottomInfo
     padding: 0 24px
   header.t-header
