--- a/projects/jtProject/css/plugins/default.css
+++ b/projects/jtProject/css/plugins/default.css
@@ -1,35 +1,33 @@
 .medium-toolbar-arrow-under:after {
   border-color: #242424 transparent transparent transparent;
-  top: 50px; }
+  top: 50px;
+  display: none;
+}
 
 .medium-toolbar-arrow-over:before {
   border-color: transparent transparent #242424 transparent;
-  top: -8px; }
+  top: -8px;
+  display: none;
+}
 
 .medium-editor-toolbar {
-  background-color: #242424;
-  background: -webkit-linear-gradient(top, #242424, rgba(36, 36, 36, 0.75));
-  background: linear-gradient(to bottom, #242424, rgba(36, 36, 36, 0.75));
-  border: 1px solid #000;
-  border-radius: 5px;
-  box-shadow: 0 0 3px #000; }
+  background-color: #fff;
+  border: none;
+  box-shadow: 0px 4px 48px rgba(33, 81, 231, 0.14);
+  border-radius: 2px; }
   .medium-editor-toolbar li button {
-    background-color: #242424;
-    background: -webkit-linear-gradient(top, #242424, rgba(36, 36, 36, 0.89));
-    background: linear-gradient(to bottom, #242424, rgba(36, 36, 36, 0.89));
-    border: 0;
-    border-right: 1px solid #000;
-    border-left: 1px solid #333;
-    border-left: 1px solid rgba(255, 255, 255, 0.1);
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
-    color: #fff;
-    height: 50px;
-    min-width: 50px;
+    padding: 0;
+    height: auto;
+    border: none!important;
+    height: 40px;
+    padding: 8px;
+    background-color: transparent;
+    min-width: 0;
     -webkit-transition: background-color .2s ease-in;
             transition: background-color .2s ease-in; }
     .medium-editor-toolbar li button:hover {
-      background-color: #000;
-      color: yellow; }
+      background-color: #2151E7;
+    }
   .medium-editor-toolbar li .medium-editor-button-first {
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px; }
@@ -37,26 +35,61 @@
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px; }
   .medium-editor-toolbar li .medium-editor-button-active {
-    background-color: #000;
-    background: -webkit-linear-gradient(top, #242424, rgba(0, 0, 0, 0.89));
-    background: linear-gradient(to bottom, #242424, rgba(0, 0, 0, 0.89));
+    background-color: #2151E7;
     color: #fff; }
 
 .medium-editor-toolbar-form {
-  background: #242424;
-  border-radius: 5px;
-  color: #999; }
+  background: #fff;
+  border-radius: 2px;
+  color: #ccc;
+  height: 40px;
+  padding: 0 16px;
+}
   .medium-editor-toolbar-form .medium-editor-toolbar-input {
-    background: #242424;
+    display: inline-block;
+    background: #fff;
     box-sizing: border-box;
     color: #ccc;
-    height: 50px; }
+    padding: 11px 0;
+    width: 216px;
+  }
+
+  .medium-editor-toolbar-form .medium-editor-toolbar-input::-webkit-input-placeholder {
+    color: #ccc;
+  }
+
+
+  .medium-editor-toolbar-form .medium-editor-toolbar-save {
+      display: none!important;
+  }
+
+  .medium-editor-toolbar-form  .medium-editor-toolbar-close {
+    color: #ccc;
+    margin: 0;
+    width: 24px;
+    height: 37px;
+    box-sizing: border-box;
+  }
+
+.medium-editor-toolbar-form  .medium-editor-toolbar-close svg {
+  vertical-align: middle;
+  transition: .4s ease;
+}
+
+.medium-editor-toolbar-form  .medium-editor-toolbar-close:hover svg .t-svgBg {
+    fill: #2151E7;
+}
+
+.medium-editor-toolbar-form  .medium-editor-toolbar-close:hover svg .t-svgFigure {
+    fill: #fff;
+}
+
   .medium-editor-toolbar-form a {
     color: #fff; }
 
 .medium-editor-toolbar-anchor-preview {
-  background: #242424;
-  border-radius: 5px;
+  background: #fff;
+  border-radius: 2px;
   color: #fff; }
 
 .medium-editor-placeholder:after {
