--- a/projects/jtProject/css/plugins/medium-editor.css
+++ b/projects/jtProject/css/plugins/medium-editor.css
@@ -57,12 +57,14 @@
   position: absolute;
   text-align: center;
   top: 0;
+  border-radius: 2px;
+  box-shadow: 0px 4px 48px rgba(33, 81, 231, 0.14);
   word-break: break-all;
   word-wrap: break-word;
   visibility: hidden;
   z-index: 2000; }
   .medium-editor-anchor-preview a {
-    color: #fff;
+    color: #ccc;
     display: inline-block;
     margin: 5px 5px 10px; }
 
