--- a/projects/jtProject/frontend/sass/_default.sass
+++ b/projects/jtProject/frontend/sass/_default.sass
@@ -6,6 +6,7 @@
 
 html, body
   font-family: Charter
+  color: #333333
   font-size: 16px
   width: 100%
   min-width: 320px
@@ -171,6 +172,14 @@ svg.t-hoverable
       right: 0
       bottom: -34px
 
+
+.active
+  svg
+    .t-svgBg
+      fill: $dblue
+    .t-svgFigure
+      fill: $white
+
 .t-line
   background-color: $lgrey
   height: 1.5px
@@ -324,13 +333,13 @@ svg.t-hoverable
   position: absolute
   top: 67px
   right: 56px
-  display: flex
-  align-items: center
-  span
-    margin-left: 8px
-    color: #CCCCCC!important
+  display: block
+  width: 24px
+  height: 24px
+  transition: .4s ease
 
 .cursor
+  z-index: 999999999
   .dot
     position: absolute
     width: 10px
@@ -342,7 +351,7 @@ svg.t-hoverable
     -webkit-backface-visibility: hidden
     opacity: 0
     cursor: none
-    z-index: 10000
+    z-index: 999999999
     pointer-events: none
     transform-style: preserve-3d
     -webkit-transform-style: preserve-3d
