--- a/projects/jtProject/frontend/sass/modules/addArticle.sass
+++ b/projects/jtProject/frontend/sass/modules/addArticle.sass
@@ -1,8 +1,10 @@
 .t-addArticleModalWrapper
   display: none
-  height: 100%
+  min-height: 100vh
+  overflow-y: auto
   background-color: $white
   z-index: 1004
+  padding-bottom: 30px
   .t-addArticleContainer
     display: flex
     flex-direction: column
@@ -26,7 +28,13 @@
       height: auto
       resize: none
       margin-top: 40px
+      line-height: inherit!important
+      blockquote
+        padding: 0 30px 0 18px
+        border-left: 2px solid #333
+        margin-top: 21px
+        margin-bottom: 21px
     .t-addArticleBtnsHolder
-      margin-top: 80px
+      margin-bottom: 40px
     .t-btnModeration
       margin-right: 16px
