--- a/projects/jtProject/frontend/sass/modules/aside.sass
+++ b/projects/jtProject/frontend/sass/modules/aside.sass
@@ -22,6 +22,7 @@ aside, .t-mobileMenu
       margin: 0
       padding: 0
       .t-menuListItem
+        position: relative
         display: block
         &:not(:last-child)
           margin-bottom: 16px
@@ -31,6 +32,18 @@ aside, .t-mobileMenu
           color: $tBlackSec
           &:hover
             color: $dblue
+        &.active
+          &:before
+           content: ''
+           display: block
+           position: absolute
+           left: -63px
+           top: 0
+           bottom: 0
+           margin: auto
+           width: 14px
+           height: 2px
+           background-color: #000
   .t-copyWrapper
     margin-top: 40px
     padding: 0 0 0 64px
