--- a/projects/jtProject/frontend/sass/modules/authSection.sass
+++ b/projects/jtProject/frontend/sass/modules/authSection.sass
@@ -16,6 +16,9 @@
       justify-content: center
       li:not(:last-child)
         margin-right: 24px
+      li
+        width: 40px
+        height: 40px
     .t-authBottomInfo
       margin-top: 40px
       color: $lgreySec
