--- a/projects/jtProject/frontend/sass/modules/addArticle.sass
+++ b/projects/jtProject/frontend/sass/modules/addArticle.sass
@@ -34,6 +34,8 @@
         border-left: 2px solid #333
         margin-top: 21px
         margin-bottom: 21px
+      h2, h3
+        margin-top: 12px
     .t-addArticleBtnsHolder
       margin-bottom: 40px
     .t-btnModeration
