--- a/projects/MIR/frontend/sass/main.sass
+++ b/projects/MIR/frontend/sass/main.sass
@@ -16,4 +16,6 @@
 @import "Modules/aboutCompany/employees"
 @import "Modules/aboutCompany/vacancy"
 @import "Modules/ForClients/clients"
+@import "Modules/Services/services"
+@import "Modules/Contacts/contacts"
 @import "Modules/Footer/footer"
